--- a/socialmedia/templates/navbar.html
+++ b/socialmedia/templates/navbar.html
@@ -1,59 +1,63 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
- <meta charset="UTF-8">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
-</head>
-<body>
-<!--  -->
-<div class="navbar" role="navigation">
-  <div class="container-fluid">
-      <div class="navbar-header">
-          <div class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"
-              style="border-color: transparent;">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-          </div>
-          <img src="../../static/images/instalogo.png" class="logo" alt="">
-          
-          
-              
-          </div>
-          <div class="navbar-collapse collapse" style="float: right;">
-            {% if user.is_authenticated %}
-              <ul class="nav navbar-nav">
-                  <li><a href="{%url 'landing'%}" style="cursor: pointer;"><i style="margin-right: 20px;cursor: pointer;font-size: 25px;color: black;" class="fa fa-home"></i></a></li>
-                  <li>
-                    <a href="/new/post/"><i style="margin-right: 20px;font-size: 20px;color: black" class="fa fa-camera"></i></a>
-                  </li>
-                  
-                  <li> <a href="{%url 'landing' %}"><i style="margin-right: 20px;font-size: 20px;color: black" class="fa fa-heart"></i></a></li>
-                  <li>
-                    <a href="{% url 'profile' profile_id=user.id %}"><i style="margin-right: 20px;font-size: 20px;color: black" class="fa fa-user"></i></a>
-                  </li>
-                  
-                  <li><a href="/logout"><i style="margin-right: 20px;font-size: 20px;color: black" class="fa fa-sign-out"></i></a>
-                  </li>
-              </ul>
-          </div>
-          {% endif %}
-          <div class="navbar-collapse collapse " style="float: right;" >
-            <form class="navbar-form" role="search" action="{% url 'search' %}">
+<nav class="navbar navbar-expand-lg navbar-light bg-light" style="position: fixed; top: 0; z-index: 1;   width: 100%;">
 
-              <div class="input-group">
-                <input type="text" class="form-control" placeholder="Search by profile name..." name="search_user">
-                <div class="input-group-btn">
-                  <button class="btn btn-default" type="submit"><i class="fa fa-search"></i></button>
-                </div>
-              </div>
-          
-            </form>
+    <a class="navbar-brand" href="{% url 'home' %}"
+      style="font-family: 'Lobster Two', cursive; font-size:25px; margin-left:80px;"><i class="fab fa-instagram"></i>Instagram</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+      aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+  
+      <form class="navbar-form" role="search" action="">
+  
+        <div class="input-group">
+          <input type="text" class="form-control" placeholder="Search" name="article">
+          <div class="input-group-btn">
+            <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
           </div>
-      </div>
-  </div>
-</div>
-</body>
-</html>
+        </div>
+  
+      </form>
+  
+      <ul class="navbar-nav">
+  
+        <li class="mt-2"><a href="{% url 'home' %}"><i class="fas fa-home"></i></a> </li>
+  
+        <li ><a class="nav-item nav-link ml-4" href="{%url 'new_post'%}"><i class="fas fa-plus"></i>New Post</a></li>
+        <li class="nav-item active">
+          {% if user.is_authenticated %}
+        </li>
+        {% else %}
+        <li>
+          <a class='btn btn-default' href="/accounts/login">Login</a>
+        </li>
+  
+        {% endif %}
+      </ul>
+  
+      <ul style="list-style-type:none;">
+      <li class="dropdown mt-3">
+        <img width="120%" height="120%" src="{{user.profile.profile_pic.url }}" alt=""
+          style="border-radius: 50%; width:30px; height:30px; ">
+        <a href="#" class="dropdown-toggle btn btn-default mt-2" data-toggle="dropdown" role="button"
+          aria-expanded="false">Account
+          <span class="caret"></span>
+        </a>
+        <ul class="dropdown-menu" role="menu">
+          <li>
+            <a href="{%url 'update_profile'%}">Update Profile</a>
+          </li>
+          <li>
+            <a href="{%url 'profile'%}">Profile</a>
+          </li>
+          <li>
+            <a href="/accounts/logout">Logout</a>
+          </li>
+        </ul>
+      </li>
+    </ul>
+  
+    </div>
+  
+    
+  </nav>
