--- a/socialmedia/templates/home.html
+++ b/socialmedia/templates/home.html
@@ -1,56 +1,56 @@
 {% extends 'base.html' %}
-{%block content%}
-{{ block.super}}
 
-<div>
-  <div class="container" style="margin-top: 100px;">
-    {%for new_post in posts %}
-    <div>
-      <div class="row">
+{% block content %}
+<div class="container">
+    {% for post in posts %}
+    <div class="card mt-3 card-custom">
+        <div class="card-header">
+            <img class="rounded-circle article-img" src="{{ post.author.profile.image.url }}" alt="">
+            <a class="mr-2" href="#">{{ post.author }}</a>
+            <div class="pull-right">
+                <a class="doted" href="#" data-toggle="modal" data-target="#exampleModal">...</a>
+            </div>
+        </div>
+        <div class="card-body">
+            <img src="{{ post.image.url }}" alt="" class="img-responsive" width="100%">
+            <div class="icons pt-3">
+                <img src="https://img.icons8.com/windows/40/000000/hearts.png"/>
+                <a href="{% url 'post-detail' post.id %}"><img src="https://img.icons8.com/ios/40/000000/topic.png"/></a>
+                <img src="https://img.icons8.com/ios/40/000000/sent.png"/>
+                <br> <p>0 likes</p>
+            </div>
+            <h6><a class="article-title" href="{% url 'post-detail' post.id %}"> <span class="author1">{{ post.author }}</span> {{ post.title }}</a></h6>
+            <small class="text-muted">{{ post.date_posted|date:"F d, Y" }}</small>
+        </div>
+        <div class="card-footer">
+            <form class="d-flex">
+                <input id="postForm" type="text" class="form-control" placeholder="Add a comment...">
+                <button class="btn info">Post</button>
+            </form>
+        </div>
+    </div>
+    {% endfor %}
+</div>
 
-        <div class="col-md-8  m-auto card">
-          <a href="profile">
-            <img width="50px" height="50px" style="border-radius: 50%;" class="img img-circle" src="{{new_post.avatar}}"
-              alt="{{new_post.author}}" srcset="">
-            <span><b>{{new_post.author}}</b></span>
-          </a>
 
-
-
-          <div class="card mb-3">
-            <img src="{{new_post.image}}" class="img-responsive card-img-top" alt="image1">
-          </div>
-
-          <div class="card-body">
-
-            <h3>{{new_post.name}}</h3>
-            <p> <b>{{new_post.author}} </b>{{new_post.caption}}</p>
-          </div>
-
-          <!-- <div class="card-footer">
-            <a class="like"><i class="fa fa-thumbs-o-up"></i>
-              Like <input class="qty1" name="qty1" readonly="readonly" type="text" value="0" />
-            </a>
-            <a class="dislike"><i class="fa fa-thumbs-o-down"></i>
-              Dislike <input class="qty2" name="qty2" readonly="readonly" type="text" value="0" />
-            </a> -->
-
-          <div class="card-footer">
-         <a href=""> <span class="info""><i class="far fa-heart fa-1x" ></i></span>  </a>
-       <a href=""><i class="far fa-comment"></i></a>  
-
-            <a href=""><i class="far fa-paper-plane"></i></a>
-
-          </div>
+<!-- Modal -->
+<div class="modal fade pt-5 mt-5" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-body text-center">
+            <p class="text-danger">Report</p>
+            <hr>
+            <p class="text-danger">Unfollow</p>
+            <hr>
+            <p>Go to Post</p>
+            <hr>
+            <p>Share</p>
+            <hr>
+            <p>Copy Link</p>
+            <hr>
+            <a class="text-dark" href="#" data-dismiss="modal">Cancel</a>
         </div>
       </div>
-    </div><br><br>
+    </div>
   </div>
-
-  {% endfor %}
-</div>
-</div>
-
-
-
-{%endblock%}
+{% endblock %}
