--- a/socialmedia/templates/navbar.html
+++ b/socialmedia/templates/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light" style="position: fixed; top: 0; z-index: 1;   width: 100%;">
+<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light" style="position: fixed; top: 0; z-index: 1;   width: 100%;">
 
     <a class="navbar-brand" href="{% url 'home' %}"
       style="font-family: 'Lobster Two', cursive; font-size:25px; margin-left:80px;"><i class="fab fa-instagram"></i>Instagram</a>
@@ -60,4 +60,4 @@
     </div>
   
     
-  </nav>
+  </nav> -->
